# SchroederTrader

./: .env.example  .gitignore  CLAUDE.md  README.md  conftest.py  pyproject.toml
backtest/: PREREGISTRATION_levered_brake_v1.md  PREREGISTRATION_levered_diversified_v2.md  backtest_hmm_comparison.py  compare_models.py  download_data.py  download_features.py  optimize_basket_weights.py  prereg_eval.py  prereg_eval_v2.py  run_backtest.py  run_backtest_kelly.py  sector_backtest.py  train_final_composite.py  train_model.py  train_sector_composite.py  walk_forward_basket.py
data/: llm_shadow_signals.csv  orders.csv  portfolio.csv  shadow_signals.csv  signals.csv
docs/: INVESTMENT_POLICY_STATEMENT.md  phase2-feature-iteration-report.md  phase2-ml-signal-report.md  phase3-composite-strategy-report.md  system-architecture.md
models/: hmm_regime.pkl  xgboost_spy.json  xgboost_spy_20d.json  xgboost_xle_20d.json  xgboost_xlk_20d.json  xgboost_xlv_20d.json
scripts/: migrate_portfolio_to_pipeline_column.py  migrate_sqlite_to_csv.py  oracle_comparison.py  replay_date.py  restore_spy_position.py  run_daily.sh  setup_cron.sh  sync_basket_state.py
tests/: test_broker.py  test_composite.py  test_config.py  test_daily_email.py  test_daily_report.py  test_email_alert.py  test_feature_engineer.py  test_kelly.py  test_llm_oracle.py  test_logging_config.py  test_main.py  test_market_data.py  test_migration.py  test_network_ready.py  test_oracle_comparison.py  test_reconcile.py  test_regime_detector.py  test_risk_manager.py  test_shadow_logging.py  test_sma_crossover.py  (+5 more)
(+110 files in other folders)
