[project]
name = "schroeder-trader"
version = "0.1.0"
description = "AI-driven stock trading system - Phase 1: SMA Crossover Bot"
requires-python = ">=3.12"
dependencies = [
    "alpaca-py>=0.33.0",
    "yfinance>=0.2.40",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.4.0",
    "anthropic>=0.88.0",
    "hmmlearn>=0.3.0",
]

[project.optional-dependencies]
backtest = [
    "vectorbt>=0.26.0",
    "kaleido>=0.2.0",
    "shap>=0.45.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/schroeder_trader"]
